refactor: adjusting elements

--- a/Tugas Besar/MainWindow.xaml
+++ b/Tugas Besar/MainWindow.xaml
@@ -47,7 +47,7 @@
                 Text="Selamat Datang" />
         </Grid>
 
-        <!--  Control dan Akun  -->
+        <!--  Control dan Akun Info  -->
         <Grid
             Grid.Row="0"
             Grid.Column="1"
@@ -180,7 +180,6 @@
                     </Button.Template>
                 </Button>
             </StackPanel>
-
         </Grid>
 
         <!--  Logo  -->
@@ -314,6 +313,7 @@
         </Grid>
 
         <!--  Konten  -->
+        <!--  Input Data Batch  -->
         <Grid
             Grid.Row="1"
             Grid.RowSpan="2"
@@ -329,6 +329,8 @@
                     FontSize="100"
                     Text="Input Data Batch" />
             </Grid>
+
+            <!--  Kelola Data  -->
             <Grid
                 x:Name="tampilanKelolaData"
                 HorizontalAlignment="Stretch"
@@ -340,6 +342,8 @@
                     Text="Kelola Data Pegawai"
                     TextAlignment="Center" />
             </Grid>
+
+            <!--  Lihat Laporan  -->
             <Grid
                 x:Name="tampilanLihatLaporan"
                 HorizontalAlignment="Stretch"
@@ -351,6 +355,8 @@
                     Text="Lihat Laporan"
                     TextAlignment="Center" />
             </Grid>
+
+            <!--  Format ARIP  -->
             <Grid
                 x:Name="tampilanFormatArip"
                 HorizontalAlignment="Stretch"
@@ -362,6 +368,8 @@
                     Text="Format ARIP"
                     TextAlignment="Center" />
             </Grid>
+
+            <!--  Format SIMGAJI  -->
             <Grid
                 x:Name="tampilanFormatSimgaji"
                 HorizontalAlignment="Stretch"
