feat: menambahkan fungsi pada tombol Add Data

--- a/AppTpp/App.xaml
+++ b/AppTpp/App.xaml
@@ -18,6 +18,7 @@
                 <ResourceDictionary Source="/Styles/Buttons.xaml" />
                 <ResourceDictionary Source="/Styles/MainBorderShadow.xaml" />
                 <ResourceDictionary Source="/Styles/DataGrid.xaml" />
+                <ResourceDictionary Source="/Styles/ComboBox.xaml" />
                 <ResourceDictionary Source="/Utilities/DataTemplate.xaml" />
 
                 <!--  Window Load Animation  -->
