--- a/AppTpp/View/Login.xaml
+++ b/AppTpp/View/Login.xaml
@@ -4,7 +4,6 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:view="clr-namespace:AppTpp.View"
     xmlns:vm="clr-namespace:AppTpp.ViewModel"
     Title="Login"
     Width="400"
@@ -32,7 +31,10 @@
 
                 <Grid Height="500">
 
-                    <view:Spinner Panel.ZIndex="1" Visibility="{Binding Loading}" />
+                    <ContentControl
+                        Panel.ZIndex="1"
+                        Content="{Binding Spinner}"
+                        Visibility="{Binding Loading}" />
 
                     <StackPanel VerticalAlignment="Center">
 
