--- a/AppTpp/MVVM/View/MainWindow.xaml
+++ b/AppTpp/MVVM/View/MainWindow.xaml
@@ -2,7 +2,7 @@
     x:Class="AppTpp.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:Menu="clr-namespace:AppTpp.Utilities"
+    xmlns:Menu="clr-namespace:AppTpp.Core"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:AppTpp.MVVM.ViewModel"
